TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "138456927702464" [label="Start"];
  "138456927702464" -> "138456927703808";
  "138456927703808" [label="Code"];
  "138456927703808" -> "138456927703952";
  "138456927703952" [label="Function"];
  "138456927703952" -> "138456927704048";
  "138456927703952" -> "138456927704096";
  "138456927703952" -> "138456927704144";
  "138456927704048" [label="main"];
  "138456927704096" [label="Parameters"];
  "138456927704144" [label="Code"];
  "138456927704144" -> "138456927616688";
  "138456927704144" -> "138456927616544";
  "138456927616688" [label="Code"];
  "138456927616688" -> "138456927609344";
  "138456927609344" [label="Declaration"];
  "138456927609344" -> "138456927616832";
  "138456927609344" -> "138456927702512";
  "138456927616832" [label="x"];
  "138456927702512" [label="1"];
  "138456927616544" [label="Code"];
  "138456927616544" -> "138456927702416";
  "138456927702416" [label="Declaration"];
  "138456927702416" -> "138456927699104";
  "138456927702416" -> "138456927701984";
  "138456927699104" [label="x"];
  "138456927701984" [label="2"];
}
